[package]
name = 'chainbridge'
version = '0.0.2'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.129", optional = true }

# primitives
sp-std = { version = "4.0.0", default-features = false }
sp-runtime = { version = "5.0.0", default-features = false }
sp-io = { version = "5.0.0", default-features = false }
sp-core = { version = "5.0.0", default-features = false }

# frame dependencies
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate',rev = '1db34ffb34a3d5d0fdf823661542b2c4c0aa8501'}
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate', rev = '1db34ffb34a3d5d0fdf823661542b2c4c0aa8501' }

pallet-balances = { version = "3.0.0", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner"}
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks"
]
